--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@antfu/eslint-config": "^0.25.2",
     "@antfu/ni": "^0.16.3",
     "@antfu/utils": "^0.5.2",
+    "@babel/types": "^7.18.9",
     "@types/node": "^18.0.3",
     "bumpp": "^8.2.1",
     "eslint": "^8.19.0",
